admin/src/main/ts/src/assets/admin.scss
/* ... */
.card {box-shadow: 2px 2px 10px $shadow-light; background: white;}

button.card-button {
  padding: 10px 20px;
  font-size: 1.1em;
  i {
    float: right;
    font-size: 1.2em;
    width: 1.2em;
  }
  &:not([disabled]):hover {
    background-color: $accent;
    i {
        color: white;
    }
  }
}

.card-layout {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  font-size: 0.9em;
  > * {
    @extend .card;
    margin: 0 20px 20px 0;
    padding: 10px 20px 0px 20px;
    box-sizing: border-box;
    flex: 0.5 0 calc(33% - 40px);
    display: flex;
    flex-wrap: wrap;
    min-width: 400px;
    &.align-start {
        align-content: flex-start;
    }
    @media screen and (max-width: 860px) {
      flex: 100%;
    }
  }
  .card-header {
    flex: 1 0 100%;
    font-size: 1.4em;
    line-height: 1.4em;
    i {
      margin-right: 15px;
    }
  }
  .card-body {
    flex: 1;
    padding: 25px 5%;
    button {
      @extend .card-button;
      display: block;
      width: 100%;
      margin: 10px 0px;
    }
    .card-list {
      max-height: 170px;
      overflow-y: auto;
      ul {
        margin-top: 0px;
        padding: 0px;
        li {
          border-bottom: 1px solid #CCC;
          transition: background 0.25s;
          a {
            padding: 5px;
            display: block;
          }
          &:hover {
            background-color: $accent-light;
          }
        }
      }
    }
    .card-big-margin {margin: 50px;}
  }
}

i.top-right {
  position: absolute;
  top: 0em;
  right: 1em;
}

.action {
  transition: color 0.25s;
  cursor: pointer;
  padding: 0 5px;
  color: $grey-dark;
  &:hover {
    color: $accent;
  }
  &.selected {
    color: $accent-dark;
  }
}

i.disabled, tr.disabled {
  pointer-events: none;
  color: #AAA !important;
}

i.fa-toggle-on::before {
  color: $validate;
}

i.opener {
  cursor: pointer;
  font-style: normal;
  font-family: "FontAwesome";
  transition: color 0.25s;
  &:hover {
    color: $accent;
  }
  &::after{
    content: '\f105';
    display: inline-block;
    margin-right: 15px;
    transition: transform 0.25s;
  }
  &.opened {
    &::after {
      transform: rotate(90deg);
    }
  }
}

i.fa-times {
  color: $contrast;
  text-decoration: none;
}

.round-button {
  position: absolute;
  border-radius: 20px;
  width: 40px;
  height: 40px;
  font-size: 25px;
  line-height: 37px;
  text-align: center;
  box-shadow: 0px 0px 5px $shadow-light;
  cursor: pointer;
  background: $white-transparent;
  color: $accent;
  transition: all 0.25s;
  &.top-right-button {
    top: -20px;
    right: -20px;
  }
  &:hover {
    background: $accent-light;
    box-shadow: 0px 0px 3px $shadow-light;
  }
  &.selected {
    background: $accent-dark;
    color: $white-transparent;
    box-shadow: 0px 0px 1px $shadow-light;
  }
}

.padded {
  padding: 20px;
}

.relative {
  position: relative;
}

a.old-console {
  background-color: $contrast;
  color: white !important;
  transition: all 0.25s;
  i:hover {
    background-color: $contrast-hover !important;
  }
}

.error-tech {
  font-size: 0.7em;
  font-style: italic;
  border-left: 5px solid $contrast;
  margin: 15px 20px;
  padding-left: 20px;
}

/* Lightbox component */
ode-lightbox {
  font-size: 16px;
  div[content] {
    padding: 20px 40px!important;
    border-radius: 3px;
    box-shadow: 2px 2px 10px $shadow-dark;
    overflow: auto !important;
    & > i {
      &::after {
        content: '\f00d';
        font-family: "FontAwesome";
        position: absolute;
        top: 0;
        right: 0;
        padding: 20px;
        font-size: 20px;
        font-style: normal;
        transition: transform 0.25s, color 0.25s;
        cursor: pointer;
      }
      &:hover::after {
        color: $accent;
      }
    }
  }
  h2 {
    margin-bottom: 0;
  }
  button {
    text-align: center;
  }
  &.inner-list {
    max-height: 95vh;
    overflow-y: hidden;
    .padded {
      padding-top: 0px;
    }
    ode-list {
      ul {
          max-height: 46vh;
          overflow-y: auto;
      }
    }
  }
}

/* Tooltips */
body > div.tooltip {
  padding: 2px 10px;
  font-size: 11px;
  border-radius: 5px;
  background-color: opacify($accent, 0.7);
  color: #EEE;
  opacity: 0;
  transition: opacity 0.35s;
}
body > div.tooltip.shown {
  opacity: 1;
}

/* Side panel component */
ode-side-panel {
  > div {
    background-color: $grey-dark;
    overflow-y: auto !important;
  }
  > div > ode-item-tree > ul {
    padding-left: 0px;
  }
}

/* Item tree component */
ode-item-tree {
  ul {
    li {
      padding: 0px;
      > a {
        color: white;
        padding: 15px 10px 15px 20px;
        display: block;
        text-decoration: none;
        transition: all 0.25s;
        &:hover {
          background-color: $main-light;
          color: white;
        }
      }
      &.root {
        > a {
          font-weight: bolder;
          border-bottom: 1px solid $shadow-light;
        }
      }
      &.selected > a {
        background-color: $accent;
        color: white;
        &:hover i {
          color: white;
        }
      }
    }
  }
  ul li.parent.unfolded>a>i.opener::after {
    transform: rotate(90deg);
  }
}

/* "Spinners" */
div.spinner-wrapper {
  z-index: 2;
  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.3), transparent);
  div.sk-cube {
    background-color: $accent;
  }
}

ode-spinner-cube.portal-spinner {
  div.spinner-wrapper {
    z-index: 101;
    top: 50px !important;
    height: calc(100% - 50px) !important;
  }
}

ode-spinner-cube.component-spinner {
  div.spinner-wrapper {
    position: absolute;
    background: rgba(235,235,235,0.6);
    top: 0px !important;
    left: 0px !important;
  }
}

ode-spinner-cube.button-spinner {
  div.spinner-wrapper {
    position: absolute;
    background: rgba(235,235,235,0.6);
    top: 0px !important;
    left: 0px !important;
    .spinner-cube {
      width: 100%;
      height: 100%;
      opacity: 0.8;
    }
  }
}
/* ... */

